--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port=8090
+server.port=8084
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3305/CloudTask
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
